@@ -11,6 +11,8 @@
 * + contrast + brightness tool. Thanks to Peter Marschall for the patch
 * + option to convert filename whitespace to underscores.
   Thanks to Peter Marschall for the patch
+* Fix crash caused by undefined profiles in .gscan2pdf
+  Closes support request #19 (Will not run past crashed session)
 
 
 1.7.3 (12.03.2017):
